--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -46,6 +46,10 @@ table *{
     padding: .5rem;
 }
 
+.imgStacksMobile{
+    display:none
+}
+
 @media (max-width:620px){
     tr td img{
         width: 50px;
@@ -56,7 +60,16 @@ table *{
 }
 @media (max-width:475px){
     tr td img{
-        width: 40px;
+        width: 60px;
+        margin: 0 1rem;
+    }
+
+    .imgStacks{
+        display: none;
+    }
+
+    .imgStacksMobile{
+        display: block;
     }
 }
 
